--- a/app/views/form_section/index.html.erb
+++ b/app/views/form_section/index.html.erb
@@ -1,12 +1,8 @@
 <div class="row">
-  <div class="large-4 medium-4 columns">
-    <%
-       #TODO i18n and STYLE
-    %>
-    <h4><%= t("forms.label") + " > #{@primero_module.name} > #{@parent_form.titleize}"%></h4>
+  <div class="large-4 medium-4 columns">    
   </div>
   <div class="large-4 medium-4 columns">
-      <%= render partial: 'record_shared/actions', locals: {model: FormSection} %>
+      <%# render partial: 'record_shared/actions', locals: {model: FormSection} %>
       <%= link_to content_tag(:span, t("form_section.create"), class: 'create_user'), new_form_section_path({module_id: @module_id, parent_form: @parent_form}),  class: 'btn green-button' %>
   </div>
   <div class="large-2 medium-2 columns">
@@ -21,11 +17,14 @@
   </div>
 </div>
 <div class="row">
-  <div class="large-12 medium-12 columns custom_forms">
-    <ul>
-      <% @form_sections.each do |form_group, forms| %>
-        <%= build_form_custom_list(form_group, forms, @primero_module, @parent_form) %>
-      <% end %>
-    </ul>
+  <div class="large-12 medium-12 columns">
+    <div class="page-content-new">
+      <div class="side-tab-content full_width">
+        <% if @form_sections.present? %>
+          <%= render :partial => "form_section/list_view_table", :locals => {:form_sections => @form_sections, :primero_module => @primero_module} %>
+        <% end %>
+        <div id="modal-dialog" class="hide"></div>
+      </div>
+    </div>
   </div>
 </div>
