initialize foundation at the end of body tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,5 +76,6 @@
 
 <%= render 'exports/password_prompt' %>
 <div class="spacer"></div>
+<script>$(document).foundation();</script>
 </body>
 </html>
