--- a/app/views/form_section/_add_field.html.erb
+++ b/app/views/form_section/_add_field.html.erb
@@ -5,7 +5,7 @@
       <div class="lang_title">
         <%= t("forms.initial_language") %> : <%= t("home.#{I18n.default_locale}") %>
       </div>
-      <%= render :partial => 'form_section/fields', :locals => {:fld => fld, :fields => fields, :given_locale => I18n.default_locale, :lookups => @lookups, :is_translation => false} %>
+      <%= render :partial => 'form_section/fields', :locals => {:fld => fld, :fields => fields, :given_locale => I18n.default_locale, :lookup_options => @lookup_options, :is_translation => false} %>
     </div>
     <div class="translation_lang_panel">
       <div class="lang_title <%= 'hide' if @show_add_field.present? %>" >
