--- a/app/views/form_section/_fields.html.erb
+++ b/app/views/form_section/_fields.html.erb
@@ -1,5 +1,5 @@
 <%
-  lookups ||= []
+  lookup_options ||= []
   is_translation ||= false
 %>
 <fieldset>
@@ -9,7 +9,7 @@
       field_type = field_hash.values.first
     %>
     <% if field_type == :select_box %>
-      <%= render "form_section/add_select_box", lookups: lookups, fld: fld unless is_translation %>
+      <%= render "form_section/add_select_box", lookup_options: lookup_options, fld: fld unless is_translation %>
     <% elsif field_type == :tally_field %>
       <%= render "form_section/add_tally_field" unless is_translation %>
     <% else %>
@@ -18,11 +18,7 @@
           <label class="key"><%= t(field_name.to_sym, :locale => given_locale.to_sym) %></label>
         </div>
         <div class="large-9 medium-9 columns">
-          <% if field_name == :name %>
-            <%= fld.send "#{field_type}", "#{field_name}".to_sym %>
-          <% else %>
-            <%= fld.send "#{field_type}", "#{field_name}_#{given_locale}".to_sym %>
-          <% end %>
+          <%= fld.send "#{field_type}", "#{field_name}_#{given_locale}".to_sym %>
         </div>
       </div>
     <% end %>
