--- a/app/views/record_shared/_list_view_table.html.erb
+++ b/app/views/record_shared/_list_view_table.html.erb
@@ -21,7 +21,7 @@
 <div class="row collapse">
   <div class="large-9 columns">
     <div class="clearfix"></div>
-    <table width="100%" class="record_list_view" cellpadding="0" cellspacing="0">
+    <table style="width: 100%;" class="record_list_view dataTable no-footer collapsed dtr-inline" cellpadding="0" cellspacing="0">
       <% header_list = list_view_header(record)%>
       <thead>
         <tr>
