--- a/app/views/form_section/_fields.html.erb
+++ b/app/views/form_section/_fields.html.erb
@@ -12,7 +12,7 @@
     <% if field_type == :select_box %>
       <%= render "form_section/add_select_box", lookup_options: lookup_options, fld: fld unless is_translation %>
     <% elsif field_type == :tally_field %>
-      <%= render "form_section/add_tally_field" unless is_translation %>
+      <%= render "form_section/add_tally_field", given_locale: given_locale %>
     <% elsif field_name == :name %>
       <%= render "form_section/add_name_field", fld: fld, field_name: field_name, field_type: field_type, given_locale: given_locale, is_field_edit: is_field_edit, is_translation: is_translation %>
     <% else %>
