--- a/app/views/shared/_side_tab.html.erb
+++ b/app/views/shared/_side_tab.html.erb
@@ -8,5 +8,7 @@
       <% end %>
       <li class=<%= (highlight_page == 'roles' ? 'current' : '') %>>
       	<%= link_to t("roles.label"), roles_path if can?(:index, Role) %></li>
+      <li class=<%= (highlight_page == 'user_groups' ? 'current' : '') %>>
+        <%= link_to t("user_groups.label"), user_groups_path if can?(:index, UserGroup) %></li>
     </ul>
  </div>
