--- a/app/views/shared/_side_tab.html.erb
+++ b/app/views/shared/_side_tab.html.erb
@@ -12,5 +12,7 @@
         <%= link_to t("user_groups.label"), user_groups_path if can?(:index, UserGroup) %></li>
       <li class=<%= (highlight_page == 'primero_programs' ? 'current' : '') %>>
         <%= link_to t("primero_programs.label"), primero_programs_path if can?(:index, PrimeroProgram) %></li>
+      <li class=<%= (highlight_page == 'primero_modules' ? 'current' : '') %>>
+        <%= link_to t("primero_modules.label"), primero_modules_path if can?(:index, PrimeroModule) %></li>
     </ul>
  </div>
