--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -44,7 +44,7 @@ table {
   background: none;
 }
 
-table.list_view, table.record_list_view {
+table.list_view, table.list_table_2, table.record_list_view {
   border:none;
   margin-bottom: 20px;
   a.id_link{
@@ -72,7 +72,7 @@ table.list_view, table.record_list_view {
       ul li {
         font-size: 0.875rem !important;
       }
-      
+
       font-size: 0.875rem !important;
       &.id_column{
         min-width: 105px;
