--- a/app/views/form_section/_add_name_field.html.erb
+++ b/app/views/form_section/_add_name_field.html.erb
@@ -17,7 +17,7 @@
 <% else %>
   <div class="row">
     <div class="large-3 medium-3 columns">
-      <label class="key"><%= t(field_name.to_sym, :locale => given_locale.to_sym) %></label>
+      <label class="key inline"><%= t(field_name.to_sym, :locale => given_locale.to_sym) %></label>
     </div>
     <div class="large-9 medium-9 columns">
       <%= fld.send "#{field_type}", "#{field_name}_#{given_locale}".to_sym %>
