--- a/app/views/form_section/_fields.html.erb
+++ b/app/views/form_section/_fields.html.erb
@@ -3,7 +3,8 @@
   is_translation ||= false
   is_field_edit ||= false
 %>
-<fieldset>
+<hr>
+<fieldset class="no-border">
   <% fields.each do |field_hash| %>
     <%
       field_name = field_hash.keys.first
@@ -18,7 +19,7 @@
     <% else %>
       <div class="row">
         <div class="large-3 medium-3 columns">
-          <label class="key"><%= t("fields.#{field_name.to_sym}", :locale => given_locale.to_sym) %></label>
+          <label class="key inline"><%= t("fields.#{field_name.to_sym}", :locale => given_locale.to_sym) %></label>
         </div>
         <div class="large-9 medium-9 columns">
           <%= fld.send "#{field_type}", "#{field_name}_#{given_locale}".to_sym %>
