--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -382,6 +382,25 @@ span.postfix_val {
   border-left: none !important;
 }
 
+#password-prompt-dialog {
+  small {
+    font-size: 65%;
+    line-height: 10px;
+    color: #777;
+  }
+
+  label {
+    font-family: 'Roboto-Medium', sans-serif;
+    font-size: .78rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  input#password-prompt-field {
+    margin-top: 15px;
+  }
+}
+
 ////////////////////////////////////////////////
 // Chosen Field
 ////////////////////////////////////////////////
